--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.ver>1.8</java.ver>
         <junit.ver>4.12</junit.ver>
+        <hamcrest.ver>1.3</hamcrest.ver>
         <jacoco.ver>0.8.1</jacoco.ver>
     </properties>
 
@@ -20,6 +21,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.ver}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest.ver}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
