--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <junit.ver>4.12</junit.ver>
         <hamcrest.ver>1.3</hamcrest.ver>
         <check.ver>3.0.0</check.ver>
+        <commons.ver>3.7</commons.ver>
 
         <maven.compiler.source>${java.ver}</maven.compiler.source>
         <maven.compiler.target>${java.ver}</maven.compiler.target>
@@ -23,6 +24,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.ver}</version>
+        </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
